# tandoor-fridge

./: LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: docker-publish.yml
fridgeplan/: Dockerfile  app.py  pyproject.toml  test_app.py
fridgeplan/templates/: index.html
