[project]
name = "fridgeplan"
version = "0.1.0"
description = "Fridge photo -> Tandoor meal plan and shopping list"
requires-python = ">=3.12"
dependencies = [
    "flask==3.*",
]

[dependency-groups]
dev = [
    "ruff>=0.15",
]

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
